--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
   <link rel="manifest" href="manifest.json">
   <meta name="mobile-web-app-capable" content="yes">
   <title>TaskTracker</title>
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css" >
 </head>
 <body>
 <!-- The app hooks into this div -->
